chore: update package-lock and package.json to include @vercel/ncc for build process
- Added @vercel/ncc as a devDependency in package.json
- Updated package-lock.json to reflect the addition of @vercel/ncc version 0.38.3
- Added build and package scripts to package.json for building the project and preparing distribution

--- a/action.yml
+++ b/action.yml
@@ -12,4 +12,4 @@ inputs:
     description: "Versión personalizada para la release (opcional, se genera automáticamente si no se proporciona)"
 runs:
   using: "node20"
-  main: "index.js"
+  main: "dist/index.js"
