--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Dependencies (descomentado para GitHub Actions)
-# node_modules/
+# Dependencies - SE EXCLUYEN porque usamos ncc para build
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -50,3 +50,7 @@ jspm_packages/
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# IMPORTANTE: dist/ NO debe estar en .gitignore
+# La carpeta dist/ contiene el código compilado necesario para GitHub Actions
+# Debe estar incluida en el repositorio
