--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "GitHub Action para generar releases automáticas usando GitHub Copilot",
   "main": "index.js",
   "scripts": {
+    "build": "ncc build index.js -o dist --source-map --license licenses.txt",
+    "package": "npm run build && git add dist/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,5 +24,8 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0"
+  },
+  "devDependencies": {
+    "@vercel/ncc": "^0.38.1"
   }
 }
