fix: update workflow and action inputs to require PR number and version

--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -1,9 +1,6 @@
 name: Auto Release
 
 on:
-  pull_request:
-    types: [closed]
-    branches: [main, master]
   workflow_dispatch:
     inputs:
       pr_number:
@@ -12,9 +9,8 @@ on:
         type: string
       version:
         description: "Versión de la release (ej: v1.2.3, 2.0.0)"
-        required: false
+        required: true
         type: string
-        default: ""
       release_type:
         description: "Tipo de release"
         required: false
@@ -27,7 +23,6 @@ on:
 
 jobs:
   auto-release:
-    if: (github.event_name == 'pull_request' && github.event.pull_request.merged == true) || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -37,39 +32,21 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Set PR Number
-        id: pr_setup
-        run: |
-          if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
-            echo "pr_number=${{ github.event.inputs.pr_number }}" >> $GITHUB_OUTPUT
-            echo "is_manual=true" >> $GITHUB_OUTPUT
-          else
-            echo "pr_number=${{ github.event.pull_request.number }}" >> $GITHUB_OUTPUT
-            echo "is_manual=false" >> $GITHUB_OUTPUT
-          fi
-
       - name: Display Execution Info
         run: |
-          echo "🚀 Ejecutando Auto Release"
-          echo "📝 Modo: ${{ steps.pr_setup.outputs.is_manual == 'true' && 'Manual' || 'Automático' }}"
-          echo "🔢 PR Number: ${{ steps.pr_setup.outputs.pr_number }}"
-          if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
-            echo "📦 Tipo de Release: ${{ github.event.inputs.release_type }}"
-            if [ -n "${{ github.event.inputs.version }}" ]; then
-              echo "🏷️ Versión: ${{ github.event.inputs.version }}"
-            else
-              echo "🏷️ Versión: Se generará automáticamente"
-            fi
-          fi
+          echo "🚀 Ejecutando Auto Release Manual"
+          echo "🔢 PR Number: ${{ github.event.inputs.pr_number }}"
+          echo "🏷️ Versión: ${{ github.event.inputs.version }}"
+          echo "📦 Tipo de Release: ${{ github.event.inputs.release_type }}"
 
       - name: Create Automatic Release
         id: auto_release
-        uses: vampi28/auto-release@v0.1.3
+        uses: ./
         with:
-          github_token: ${{ secrets.GH_TOKEN }}
-        #   huggingface_token: ${{ secrets.HUGGINGFACE_TOKEN }}
-          pr_number: ${{ steps.pr_setup.outputs.pr_number }}
-          version: ${{ github.event.inputs.version || '' }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          huggingface_token: ${{ secrets.HUGGINGFACE_TOKEN }}
+          pr_number: ${{ github.event.inputs.pr_number }}
+          version: ${{ github.event.inputs.version }}
 
       - name: Display Release Information
         run: |
