--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -43,8 +43,8 @@ jobs:
         id: auto_release
         uses: ./
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          huggingface_token: ${{ secrets.HUGGINGFACE_TOKEN }}
+          github_token: ${{ secrets.GH_TOKEN }}
+        #   huggingface_token: ${{ secrets.HUGGINGFACE_TOKEN }}
           pr_number: ${{ github.event.inputs.pr_number }}
           version: ${{ github.event.inputs.version }}
 
